--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -14,10 +14,10 @@
         <td><%= room.id %></td>
         <td><%= room.room_loc %></td>
         <td><%= room.room_cap %></td>
-        <td><%= link_to "Show this room", room %></td>
+        <td><%= link_to "Show this room", room, class: "button-style" %></td>
       </tr>
       <% end %>
     </table>
 </div>
-<%= link_to "New room", new_room_path, class: 'button-style' %><br>
+<%= link_to "New room", new_room_path, class: 'button-style' %> |
 <%= link_to "Back to Home Page", root_path, class: 'button-style' %><br>
