--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -1,3 +1,4 @@
+<div class="form-container">
 <h1>New admin</h1>
 
 <%= render "form", admin: @admin %>
@@ -6,4 +7,5 @@
 
 <div>
   <%= link_to "Back to admins", admins_path %>
+</div>
 </div>
