--- a/app/views/event_tickets/index.html.erb
+++ b/app/views/event_tickets/index.html.erb
@@ -1,17 +1,17 @@
 <h1>Event Tickets</h1>
 <% if current_admin %>
   <%= form_tag(event_tickets_path, method: :get) do %>
-    <div class="field">
+    <div class="form-field-block">
       <%= label_tag :event_id, "Event ID" %>
       <%= text_field_tag :event_id, params[:event_id] %>
     </div>
 
-    <div class="field">
+    <div class="form-field-block">
       <%= label_tag :attendee_id, "Attendee ID" %>
       <%= text_field_tag :attendee_id, params[:attendee_id] %>
     </div>
 
-    <%= submit_tag "Filter" %>
+    <%= submit_tag "Filter", class: "button-style" %>
   <% end %>
 <% end %>
 <table class="table-style">
