--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="form-container">
 <h1>Editing review</h1>
 
 <%= render "form", review: @review %>
@@ -5,6 +6,7 @@
 <br>
 
 <div>
-  <%= link_to "Show this review", @review %> |
-  <%= link_to "Back to reviews", reviews_path %>
+  <%= link_to "Show this review", @review, class: 'button-style' %> |
+  <%= link_to "Back to reviews", reviews_path, class: 'button-style' %>
+</div>
 </div>
