--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
+<div class="form-container">
 <h1>New review</h1>
 
 <%= render "form", review: @review %>
@@ -5,5 +6,6 @@
 <br>
 
 <div>
-  <%= link_to "Back to reviews", reviews_path %>
+  <%= link_to "Back to reviews", reviews_path, class: "button-style" %>
+</div>
 </div>
