--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,3 +1,4 @@
+<div class="form-container">
 <h1>New room</h1>
 
 <%= render "form", room: @room %>
@@ -6,4 +7,5 @@
 
 <div>
   <%= link_to "Back to rooms", rooms_path, class: 'button-style' %>
+</div>
 </div>
