--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -3,11 +3,11 @@
 <%= form_with model: @admin, url: admin_path(@admin), method: :patch, local: true do |form| %>
     <div class="form-field-block">
       <%= form.label :email, style: "display: block" %>
-      <%= form.text_field :email, value: @admin.email, readonly: true %>
+      <%= @admin.email %>
     </div>
     <div class="form-field-block">
       <%= form.label :password, style: "display: block" %>
-      <%= form.text_field :password, value: @admin.password, readonly: true %>
+      <%= @admin.password %>
     </div>
     <div class="form-field-block">
       <%= form.label :name, style: "display: block" %>
