--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,7 +2,9 @@
 
 <h1>Reviews</h1>
 
-<%= link_to "New review", new_review_path, class: 'button-style'%>
+<% if current_user %>
+  <%= link_to "New review", new_review_path, class: 'button-style'%>
+<% end %>
 
 <%= form_tag reviews_path, method: :get, id: 'reviews-filter-form' do %>
   <label for="filter_type">Filter by:</label>
